# quri-qsci

./: .gitignore  404.html  AUTHENTIC_TIME_EVOLUTION_IMPLEMENTATION.md  README.md  README_STRUCTURE.md  debug_analysis.md  debug_status_final.md  index.html  issue.md  n2_convergence_analysis.py  objects.inv  pyproject.toml  pytest.ini  requirements.txt  scaled_QSCI.md  setup.py  sitemap.xml  test_exact_evolution.py  test_physics_fixes.py  test_vm_creation.py  vm_metrics_fix.py
api/: index.html
api/SUMMARY/: index.html
api/ffsim_integration/: index.html
api/probability_calculator/: index.html
api/qsci_algo_interface/: index.html
api/qsci_algorithms/: index.html
api/qsci_vm_analysis/: index.html
api/qsci_vm_interface/: index.html
changelog/: index.html
contributing/: index.html
design/: index.html
docs/: DESIGN_DOCUMENT.md  TESTS.md  TODO.md  TODO_tests.md  Usage.md  VM_METRICS_FIX_SUMMARY.md  issue.md  to_fix.md
docs/algorithms/: overview.md
docs/design/: architecture.md  performance.md  quri_integration.md  time_evolution.md
documentation/: mkdocs.yml
documentation/docs/: changelog.md  contributing.md  index.md  installation.md  (+3 more)
examples/: N2_cas_18o.py  README.md  README_H2_H4_ANALYSIS.md  h2_h4_comprehensive_analysis.py  h2_potential_curve.py  h2_potential_curve_minimal.py  h2_potential_curve_quick_test.py  h2_te_qsci_vm_test.py  h4_te_qsci_vm_analysis.py  h6_figure1_test.py  h6_figure1_test_orig.py  h6_molecule_example.py  h6_table_iii_reproduction.py  h6_te_qsci_vm_analysis.py  h6_te_qsci_vm_tutorial.py  h6_trotter_step_analysis.py  h6_trotter_step_analysis_old.py  index.html  main.py  n2_qsci_figure3.py  plot_stochastic_results.py  quick_test.py  run_stochastic_qsci.py  scaled_QSCI.py  scaled_QSCI_original_backup.py  simplified_h6_example.py  test_vm_factory.py  vm_sampling_direct_test.py
installation/: index.html
license/: index.html
overview/: index.html
quickstart/: index.html
search/: search_index.json
src/: __init__.py  qsci_algorithms.py  qsci_algorithms.py.backup  qsci_algorithms.py.backup.20250628_152522  qsci_vm_analysis.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_h2_verification.py  test_implementation.py  test_qsci_core.py  test_qsci_integrations.py  test_qsci_real_integration.py  test_qsci_verification.py
(+97 files in other folders)
